10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất - update đơi các service khác chạy
10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất - update đơi các service khác chạy

--- a/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/app-me-built/docker-compose.yml
+++ b/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/app-me-built/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: secret
       MYSQL_DB: todos
+    # Đợi các service khác chạy
+    depends_on:
+      - mysql_ten
+      - db_viewer
   
   #Tên controllers
   mysql_ten:
