--- a/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/docker-laravel-8/source/docker-compose.yml
+++ b/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/docker-laravel-8/source/docker-compose.yml
@@ -28,6 +28,12 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d/
     networks:
       - mynetwork
+  db_viewer:
+    image: adminer
+    ports:
+      - 8080:8080
+    environment:
+      ADMINER_DEFAULT_SERVER: db
   #Mysl Service
   db:
     image: mysql:8
