update test docker laravel

--- a/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/my_laravel_dir_v2/Dockerfile
+++ b/10_DOCKER COMPOSE - Dung Hợp Ứng Dụng Docker Thành Duy Nhất/my_laravel_dir_v2/Dockerfile
@@ -1,12 +1,21 @@
+# Thêm thư viên
 FROM php:8.0-apache
 
+
+# Thêm các package
 RUN apt-get update && \
     apt-get install -y git unzip libzip-dev && \
     docker-php-ext-install pdo_mysql zip && \
     pecl install xdebug && \
     docker-php-ext-enable xdebug
 
+# Copy all file vào thư mục html
 COPY . /var/www/html
 
 RUN chown -R www-data:www-data /var/www/html && \
-    a2enmod rewrite
+    a2enmod rewrite && \
+
+    # Config đọc trong file public
+    sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/000-default.conf && \
+    sed -i 's!/var/www/html!/var/www/html/public!g' /etc/apache2/sites-available/default-ssl.conf && \
+    service apache2 restart
